test on mobile, fix video load

--- a/_header.scss
+++ b/_header.scss
@@ -111,6 +111,9 @@ a {
         transform: translateY(-50%);
         width: 100%;
         object-fit: cover;
+         @media only screen and (max-width: 1100px) {
+             display: none;
+         }
     }
 
     &-btn {
@@ -291,7 +294,7 @@ a {
         font-size: 1.5rem;
     }
 
-    @media only screen and (max-width: 400px) {
+    @media only screen and (max-width: 450px) {
         font-size: 1.3rem;
         letter-spacing: 0;
     }
