--- a/style.css
+++ b/style.css
@@ -386,6 +386,12 @@ a {
      object-fit: cover;
 }
 
+@media only screen and (max-width: 1100px) {
+  .header video {
+    display: none;
+  }
+}
+
 .header-btn {
   opacity: 0;
   text-decoration: none;
@@ -596,7 +602,7 @@ a {
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   .header-intro {
     font-size: 1.3rem;
     letter-spacing: 0;
